crates/ty_python_semantic/resources/mdtest/snapshots/param_spec_errors.md_-_test_for_paramspec_e…_(4b332d9e024d6e7b).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: param_spec_errors.md - test for paramspec error location
mdtest path: crates/ty_python_semantic/resources/mdtest/param_spec_errors.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Callable
 2 | 
 3 | def fn1(a: int) -> None: ...
 4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
 5 | 
 6 | foo(fn1, a="a")  # error: [invalid-argument-type]
 7 | 
 8 | def fn2(a: int, b: str, c: float) -> None: ...
 9 | def bar[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
10 | 
11 | # error: [invalid-argument-type]
12 | # error: [invalid-argument-type]
13 | # error: [invalid-argument-type]
14 | bar(fn2, a="a", b=2, c="c")
15 | from typing import Callable
16 | 
17 | def fn(a: int) -> None: ...
18 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
19 | 
20 | foo(fn, a=1, unknown_param=2)  # error: [unknown-argument]
21 | from typing import Callable
22 | 
23 | def fn(a: int, /) -> None: ...
24 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
25 | 
26 | foo(fn, a=1)  # error: [positional-only-parameter-as-kwarg]
27 | from typing import Callable
28 | 
29 | def fn(a: int, b: int) -> None: ...
30 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
31 | 
32 | # error: [parameter-already-assigned]
33 | # error: [missing-argument]
34 | foo(fn, 1, a=2)
35 | from typing import Callable
36 | 
37 | def fn(a: int) -> None: ...
38 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
39 | 
40 | foo(fn, 1, 2, 3)  # error: [too-many-positional-arguments]
```

# Diagnostics

```
error[invalid-argument-type]: Argument to function `foo` is incorrect
 --> src/mdtest_snippet.py:6:10
  |
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |          ^^^^^ Expected `int`, found `Literal["a"]`
7 |
8 | def fn2(a: int, b: str, c: float) -> None: ...
  |
info: Function defined here
 --> src/mdtest_snippet.py:4:5
  |
3 | def fn1(a: int) -> None: ...
4 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
  |     ^^^         ------------------ Parameter declared here
5 |
6 | foo(fn1, a="a")  # error: [invalid-argument-type]
  |
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Argument to function `bar` is incorrect
  --> src/mdtest_snippet.py:14:10
   |
12 | # error: [invalid-argument-type]
13 | # error: [invalid-argument-type]
14 | bar(fn2, a="a", b=2, c="c")
   |          ^^^^^ Expected `int`, found `Literal["a"]`
15 | from typing import Callable
   |
info: Function defined here
  --> src/mdtest_snippet.py:9:5
   |
 8 | def fn2(a: int, b: str, c: float) -> None: ...
 9 | def bar[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
   |     ^^^         ------------------ Parameter declared here
10 |
11 | # error: [invalid-argument-type]
   |
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Argument to function `bar` is incorrect
  --> src/mdtest_snippet.py:14:17
   |
12 | # error: [invalid-argument-type]
13 | # error: [invalid-argument-type]
14 | bar(fn2, a="a", b=2, c="c")
   |                 ^^^ Expected `str`, found `Literal[2]`
15 | from typing import Callable
   |
info: Function defined here
  --> src/mdtest_snippet.py:9:5
   |
 8 | def fn2(a: int, b: str, c: float) -> None: ...
 9 | def bar[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
   |     ^^^                             ------------- Parameter declared here
10 |
11 | # error: [invalid-argument-type]
   |
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Argument to function `bar` is incorrect
  --> src/mdtest_snippet.py:14:22
   |
12 | # error: [invalid-argument-type]
13 | # error: [invalid-argument-type]
14 | bar(fn2, a="a", b=2, c="c")
   |                      ^^^^^ Expected `int | float`, found `Literal["c"]`
15 | from typing import Callable
   |
info: Function defined here
  --> src/mdtest_snippet.py:9:5
   |
 8 | def fn2(a: int, b: str, c: float) -> None: ...
 9 | def bar[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
   |     ^^^                                            ------------------ Parameter declared here
10 |
11 | # error: [invalid-argument-type]
   |
info: rule `invalid-argument-type` is enabled by default

```

```
error[unknown-argument]: Argument `unknown_param` does not match any known parameter of function `foo`
  --> src/mdtest_snippet.py:20:14
   |
18 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
19 |
20 | foo(fn, a=1, unknown_param=2)  # error: [unknown-argument]
   |              ^^^^^^^^^^^^^^^
21 | from typing import Callable
   |
info: Function signature here
  --> src/mdtest_snippet.py:18:5
   |
17 | def fn(a: int) -> None: ...
18 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
19 |
20 | foo(fn, a=1, unknown_param=2)  # error: [unknown-argument]
   |
info: rule `unknown-argument` is enabled by default

```

```
error[positional-only-parameter-as-kwarg]: Positional-only parameter 1 (`a`) passed as keyword argument of function `foo`
  --> src/mdtest_snippet.py:26:9
   |
24 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
25 |
26 | foo(fn, a=1)  # error: [positional-only-parameter-as-kwarg]
   |         ^^^
27 | from typing import Callable
   |
info: Function signature here
  --> src/mdtest_snippet.py:24:5
   |
23 | def fn(a: int, /) -> None: ...
24 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
25 |
26 | foo(fn, a=1)  # error: [positional-only-parameter-as-kwarg]
   |
info: rule `positional-only-parameter-as-kwarg` is enabled by default

```

```
error[missing-argument]: No argument provided for required parameter `b` of function `foo`
  --> src/mdtest_snippet.py:34:1
   |
32 | # error: [parameter-already-assigned]
33 | # error: [missing-argument]
34 | foo(fn, 1, a=2)
   | ^^^^^^^^^^^^^^^
35 | from typing import Callable
   |
info: Parameter declared here
  --> src/mdtest_snippet.py:30:37
   |
29 | def fn(a: int, b: int) -> None: ...
30 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
   |                                     ^^^^^^^^^^^^^
31 |
32 | # error: [parameter-already-assigned]
   |
info: rule `missing-argument` is enabled by default

```

```
error[parameter-already-assigned]: Multiple values provided for parameter `a` of function `foo`
  --> src/mdtest_snippet.py:34:12
   |
32 | # error: [parameter-already-assigned]
33 | # error: [missing-argument]
34 | foo(fn, 1, a=2)
   |            ^^^
35 | from typing import Callable
   |
info: rule `parameter-already-assigned` is enabled by default

```

```
error[too-many-positional-arguments]: Too many positional arguments to function `foo`: expected 1, got 3
  --> src/mdtest_snippet.py:40:12
   |
38 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
39 |
40 | foo(fn, 1, 2, 3)  # error: [too-many-positional-arguments]
   |            ^
   |
info: Function signature here
  --> src/mdtest_snippet.py:38:5
   |
37 | def fn(a: int) -> None: ...
38 | def foo[**P, T](fn: Callable[P, T], *args: P.args, **kwargs: P.kwargs): ...
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
39 |
40 | foo(fn, 1, 2, 3)  # error: [too-many-positional-arguments]
   |
info: rule `too-many-positional-arguments` is enabled by default

```
