crates/ty_python_semantic/resources/mdtest/snapshots/return_type.md_-_Function_return_type_-_Invalid_return_type.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: return_type.md - Function return type - Invalid return type
mdtest path: crates/ty_python_semantic/resources/mdtest/function/return_type.md
---

# Python source files

## mdtest_snippet.py

```
 1 | # error: [invalid-return-type]
 2 | def f() -> int:
 3 |     1
 4 | 
 5 | def f() -> str:
 6 |     # error: [invalid-return-type]
 7 |     return 1
 8 | 
 9 | def f() -> int:
10 |     # error: [invalid-return-type]
11 |     return
12 | 
13 | from typing import TypeVar
14 | 
15 | T = TypeVar("T")
16 | 
17 | # error: [invalid-return-type]
18 | def m(x: T) -> T: ...
```

# Diagnostics

```
error[invalid-return-type]: Function can implicitly return `None`, which is not assignable to return type `int`
 --> src/mdtest_snippet.py:2:12
  |
1 | # error: [invalid-return-type]
2 | def f() -> int:
  |            ^^^
3 |     1
  |
info: `lint:invalid-return-type` is enabled by default

```

```
error[invalid-return-type]: Return type does not match returned value
 --> src/mdtest_snippet.py:5:12
  |
3 |     1
4 |
5 | def f() -> str:
  |            --- Expected `str` because of return type
6 |     # error: [invalid-return-type]
7 |     return 1
  |            ^ Expected `str`, found `Literal[1]`
8 |
9 | def f() -> int:
  |
info: `lint:invalid-return-type` is enabled by default

```

```
error[invalid-return-type]: Return type does not match returned value
  --> src/mdtest_snippet.py:9:12
   |
 7 |     return 1
 8 |
 9 | def f() -> int:
   |            --- Expected `int` because of return type
10 |     # error: [invalid-return-type]
11 |     return
   |     ^^^^^^ Expected `int`, found `None`
12 |
13 | from typing import TypeVar
   |
info: `lint:invalid-return-type` is enabled by default

```

```
error[invalid-return-type]: Function can implicitly return `None`, which is not assignable to return type `T`
  --> src/mdtest_snippet.py:18:16
   |
17 | # error: [invalid-return-type]
18 | def m(x: T) -> T: ...
   |                ^
   |
info: `lint:invalid-return-type` is enabled by default

```
